[package]
name = "hyper_cgi"
version = "0.2.0"
authors = ["Christian Schilling <christian.schilling@esrlabs.com>", "Louis-Marie Givel <louis-marie.givel@esrlabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Run CGI scripts with hyper"
repository = "https://github.com/LMG/hyper_cgi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features=["compat"] }
hyper = "0.13"

[lib]
name = "hyper_cgi"
path = "src/hyper_cgi.rs"
