[package]
name = "hyper_cgi"
version = "0.1.10"
authors = ["Christian Schilling <christian.schilling@esrlabs.com>", "Louis-Marie Givel <louis-marie.givel@esrlabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Run CGI scripts with hyper"
repository = "https://github.com/LMG/hyper_cgi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.9", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
hyper = { version = "0.14", features = ["stream", "tcp", "server", "http1"] }

clap = { version = "2.33", optional = true }
base64 = { version = "0.13", optional = true }
rand = { version = "0.8", optional = true, features = ["std"] }
lazy_static = { version = "1.4", optional = true }

[lib]
name = "hyper_cgi"
path = "src/hyper_cgi.rs"

[features]
test-server = ["clap", "base64", "lazy_static", "rand"]

[[bin]]
name = "hyper-cgi-test-server"
required-features = ["test-server"]
